--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://lgiardi.github.io/ASSIGNMENT-SOLUTION/",
+  "homepage": "https://lgiardi.github.io/assignment-solution/",
   "name": "react-complete-guide",
   "version": "0.1.0",
   "private": true,
